--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
     justify-content: space-between;
     align-items: center;
 }
+.about{
+    background-color: none;
+    color:#fff;
+    font-weight:bold;
+    text-decoration:none;
+}
+.about:hover{
+    box-shadow: ;
+}
 
 .custom-header .custom-logo {
     font-size: 24px;
