--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+*{
+
+}
 /* Styles for the custom header */
 .custom-header {
     background-color: #842323;
@@ -6,22 +10,23 @@
     padding: 20px;
     text-align: center;
 }
-
 .custom-header .custom-header-inner {
     max-width: 1200px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .about{
-    background-color: none;
     color:#fff;
     font-weight:bold;
     text-decoration:none;
+    transition:color 0,8s;
+    margin-left:88px;
+    
 }
 .about:hover{
-    box-shadow: ;
+    color:#000000;
+    font-weight:bold;
 }
 
 .custom-header .custom-logo {
@@ -41,6 +46,7 @@
     background-color: #f8f9fa;
     padding: 60px 0;
     text-align: center;
+
 }
 
 .custom-hero .custom-hero-inner {
@@ -97,10 +103,18 @@
     background-color: #651d1d;
     color: #fff;
     border-radius:10px;
+    margin-left:-20px;
+    margin-right:30px;
 }
 .addcard:hover{
     background-color:#fff;
     color:#651d1d;
+}
+.price{
+    color:#837e7e;
+    }
+.price:hover{
+    color: floralwhite;
 }
 /* Styles for the custom album section */
 .custom-album {
@@ -121,7 +135,7 @@
     background-color: #040404;
     border: 1px solid #ddd;
     border-radius: 4px;
-    margin: 10px;
+    margin: 2px;
     padding: 20px;
     text-align: center;
     max-width: 300px;
@@ -148,7 +162,24 @@
     background-color: #842323;
     color: #000000;
     padding: 20px 0;
-    text-align: center;
+    text-align: left;
+}
+.custom-footer-text .contact {
+    color: black;
+    font-weight:bold;
+    text-decoration:none;
+}
+.custom-footer-text .backmain{
+    background-color:#090808;
+    color: #fff;
+    border-radius:6px;
+    height:25px;
+    margin-left:1000px;
+    margin-top: -15cm;
+}
+.custom-footer-text .backmain:hover{
+    background-color: #fff;
+    color:#090808;
 }
 
 
